--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title} again #{user.name}!
+  if locals.user.name
+    p Welcome to #{title} #{user.name}
