--- a/views/index.jade
+++ b/views/index.jade
@@ -3,17 +3,20 @@ extends layout
 block content
   dl
     dt What is this site?
-      dd A simple express website that was built originally to host the 
-        | last image captured by my Raspberry Pi security webcam, so I 
-        | could view it over the net on various devices with limited internet.
+      dd A simple express website I built to host the 
+        | last image captured by my Raspberry Pi security webcam.  This allows 
+        | me to view it over the net on various devices with limited internet
+        | bandwith.
     dt Seriously?  You built a website just for that?
       dd No not really.  It's just one of the many sites I've
-        | built whilst learning 
-        a(href="http://expressjs.com") express
-        |.  Yes of course it's totally over the
+        | built whilst getting up to speed with the 
+        a(href="http://nodejs.org") node 
+        | and  
+        a(href="http://expressjs.com") express 
+        | stacks.  Yes of course it's totally over the
         | top for what it does but when I'm brushing up on a new stack I can
-        | focus better when there is a purpose to what I'm building.  And let's
-        | face it, does the world really need another TODO app?
+        | focus better when there is a purpose to what I'm building.  Let's
+        | be honest, does the world really need another TODO app?
     dt Can I use the live site?
       dd Sorry, no.  The image(s) are only of my front driveway anyway.  Plus, 
         | if I let everyone in there wouldn't have been much point in my learning 
