--- a/views/last.jade
+++ b/views/last.jade
@@ -1,7 +1,10 @@
 extends layout
 
+block header
+  //- exclude the header from this file
 block content
+  img(src="images/last.jpg")
+  hr
   p
     Last Modified #{modified}
-    a.btn.btn-primary(href="last") Refresh
-  img(src="images/last.jpg")
+    a.btn.btn-primary.pull-right(href="last") Refresh
